--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -10,6 +10,7 @@
         = ' '
         b = @quiz.day
         = " #{@quiz.cohort.name}"
+      p = render partial: 'shared/header_timestamps', locals: {model: @quiz}
     p Send the following link to students to take the quiz.
     p
       b Student quiz URL:
