--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -7,12 +7,7 @@
       h1 Edit your profile
       p = render partial: 'shared/header_timestamps', locals: {model: @user}
     = form_for @user, url: profile_path do |f|
-      - if @user.errors.any?
-        .alert.alert-warning
-          p = "#{pluralize(@user.errors.count, 'error')} prohibited your profile from being updated."
-          ul
-            - @user.errors.full_messages.each do |message|
-              li = message
+      = render partial: 'shared/form_errors', locals: {model: @user}
       .row
         .col-md-5
           .form-group
