--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,8 +7,10 @@
     .page-header
       h1
         = "Question #{@question.id} "
-        = link_to 'Edit', edit_question_path, class: 'btn btn-xs btn-default'
-      p = render partial: 'shared/header_timestamps', locals: {model: @question}
+      p
+        = render partial: 'shared/header_timestamps', locals: {model: @question}
+        = ' | '
+        = link_to 'Edit question', edit_question_path
     .row
       .col-md-6
         h2 Question
