--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -31,12 +31,7 @@
           .panel.panel-primary
             .panel-heading Create a quiz
             .panel-body
-              - if @quiz.errors.any?
-                .alert.alert-warning
-                  p = "#{pluralize(@quiz.errors.count, 'error')} prohibited this quiz from being saved."
-                  ul
-                    - @quiz.errors.full_messages.each do |message|
-                      li = message
+              = render partial: 'shared/form_errors', locals: {model: @question}
               .form-group
                 = f.label :day, class: 'control-label col-sm-3'
                 .col-sm-9 = f.text_field :day, class: 'form-control'
