--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,7 +10,7 @@
       p
         = render partial: 'shared/header_timestamps', locals: {model: @question}
         = ' | '
-        = link_to 'Edit question', edit_question_path
+        = link_to 'edit', edit_question_path
     .row
       .col-md-6
         h2 Question
