--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,19 +3,20 @@
     .page-header
       h1 Build and deliver quizzes
     .row
-      .col-md-4
+      .col-sm-5
         p.lead Choose a management option:
         .list-group
-          = link_to 'questions', class: 'list-group-item' do
-            | Questions
-            span.badge = @page[:questions_count]
+          = link_to quizzes_path, class: 'list-group-item' do
+            | Quizzes
+            span.badge = @page[:quizzes_count]
           = link_to activities_path, class: 'list-group-item' do
             | Activities
             span.badge = @page[:activities_count]
+          = link_to questions_path, class: 'list-group-item' do
+            | Questions
+            span.badge = @page[:questions_count]
           = link_to cohorts_path, class: 'list-group-item' do
             | Cohorts
             span.badge = @page[:cohorts_count]
-      .col-md-5.col-md-push-1
-        p.lead Or&hellip;
-        p
-          = link_to 'Do a Quiz', quizzes_path, class: 'btn btn-primary btn-lg'
+      .col-sm-6.col-sm-push-1
+        = render partial: 'quizzes/form'
