--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -27,15 +27,4 @@
                   dt Cohort
                   dd = link_to quiz.cohort.name, quiz.cohort
       .col-md-6
-        = form_for @quiz, html: {class: 'form-horizontal'} do |f|
-          .panel.panel-primary
-            .panel-heading Create a quiz
-            .panel-body
-              = render partial: 'shared/form_errors', locals: {model: @quiz}
-              .form-group
-                = f.label :day, class: 'control-label col-sm-3'
-                .col-sm-9 = f.text_field :day, class: 'form-control'
-              .form-group
-                = f.label :cohort_id, class: 'control-label col-sm-3'
-                .col-sm-9 = f.select(:cohort_id, Cohort.all.map { |cohort| ["#{cohort.compass_install.upcase} - #{cohort.name}", cohort.id] }, {}, {class: 'form-control'})
-            .panel-footer.clearfix = f.submit class: 'btn btn-primary pull-right'
+        = render partial: 'form'
