--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -10,7 +10,7 @@
         - if @users.empty?
           p There are currently no users in the system.
         - else
-          table.table
+          table.table.table-hover
             thead
               tr
                 th Name
@@ -35,4 +35,7 @@
               .form-group
                 = f.label :email, class: 'control-label col-sm-3'
                 .col-sm-9 = f.text_field :email, class: 'form-control'
+              .form-group
+                = f.label :password, class: 'control-label col-sm-3'
+                .col-sm-9 A password will be generated randomly and displayed <strong>once</strong> at the top of the screen.
             .panel-footer.clearfix = f.submit class: 'btn btn-primary pull-right'
