--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -10,21 +10,24 @@
         - if @quizzes.empty?
           p There are currently no quizzes in the system.
         - else
-          - @quizzes.each do |quiz|
-            .panel.panel-default
-              .panel-heading
-                = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: 'Are you sure you want to delete this quiz?'} do
-                  i.fa.fa-trash title="Delete"
-                = link_to quiz_path(quiz), class: 'text-inherit' do
-                  i = quiz.cohort.compass_install.upcase
-                  = ' '
-                  b = quiz.day
-                  = " #{quiz.cohort.name}"
-              .panel-body
-                dl.dl-horizontal
-                  dt Submissions
-                  dd = quiz.submissions.count
-                  dt Cohort
-                  dd = link_to quiz.cohort.name, quiz.cohort
+          table.table
+            thead
+              tr
+                th Day
+                th Cohort
+                th Details
+                th
+                th
+            tbody
+              - @quizzes.each do |quiz|
+                tr
+                  td = quiz.day
+                  td = link_to quiz.cohort.name, quiz.cohort
+                  td = link_to quiz do
+                    time datetime="#{quiz.created_at.to_formatted_s(:iso)}" = "created #{time_ago_in_words(quiz.created_at)} ago"
+                  td = link_to quiz.submissions.count, new_quiz_submission_url(quiz), class: 'label label-primary', title: 'Submissions - New submission link'
+                  td.text-right
+                    = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: 'Are you sure you want to delete this quiz?'} do
+                      i.fa.fa-trash title="Delete"
       .col-md-6
         = render partial: 'form'
