--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -10,7 +10,7 @@
         - if @users.empty?
           p There are currently no users in the system.
         - else
-          table.table.table-hover
+          table.table
             thead
               tr
                 th Name
