--- a/app/views/shared/_header_timestamps.html.slim
+++ b/app/views/shared/_header_timestamps.html.slim
@@ -1,3 +1,7 @@
-= "Created #{time_ago_in_words(model.created_at)} ago"
+= "Created "
+time datetime="#{model.created_at.to_formatted_s(:iso)}" = "#{time_ago_in_words(model.created_at)} ago"
 - unless model.created_at == model.updated_at
-  span.text-muted = " (and modified #{time_ago_in_words(model.updated_at)} ago)"
+  span.text-muted
+    = ' (and modified '
+    time datetime="#{model.updated_at.to_formatted_s(:iso)}" = "#{time_ago_in_words(model.updated_at)} ago"
+    = ')'
