--- a/app/views/cohorts/show.html.slim
+++ b/app/views/cohorts/show.html.slim
@@ -3,7 +3,7 @@
     ol.breadcrumb
       li = link_to 'Home', root_path
       li = link_to 'Cohorts', cohorts_path
-      li.active = "#{@cohort.compass_install.upcase} #{@cohort.name}"
+      li.active = @cohort.name
     .page-header
       h1
         i = @cohort.compass_install.upcase
@@ -31,23 +31,28 @@
                 .col-md-6 = f.text_field :compass_primary_key, class: 'form-control'
         .form-group.text-right
           = f.submit class: 'btn btn-primary'
-    table.table
-      thead
-        tr
-          th Student
-          - @cohort.quizzes.each_with_index do |quiz, index|
-            th = link_to "Quiz ##{index + 1}", quiz
-      tbody
-        - @cohort.students.each do |student|
+    .clearfix
+      h2 Quizzes
+    - if @cohort.quizzes.empty?
+      p There are currently no quizzes for this cohort in the system.
+    - else
+      table.table
+        thead
           tr
-            td
-              - if student.github_username.blank?
-                span.text-muted
-                  | [anonymous]
-              - else
-                = student.github_username
-            - @cohort.quizzes.each do |quiz|
+            th Student
+            - @cohort.quizzes.each_with_index do |quiz, index|
+              th = link_to "Quiz ##{index + 1}", quiz
+        tbody
+          - @cohort.students.each do |student|
+            tr
               td
-                - quiz.submissions.each do |submission|
-                  - if submission.student_id == student.id
-                    .score = link_to submission.score, submission
+                - if student.github_username.blank?
+                  span.text-muted
+                    | [anonymous]
+                - else
+                  = student.github_username
+              - @cohort.quizzes.each do |quiz|
+                td
+                  - quiz.submissions.each do |submission|
+                    - if submission.student_id == student.id
+                      .score = link_to submission.score, submission
