--- a/app/views/cohorts/index.html.slim
+++ b/app/views/cohorts/index.html.slim
@@ -13,18 +13,18 @@
           table.table
             thead
               tr
+                th width="100%" Cohort
                 th
                   abbr title="Compass install" Install
                 th
                   abbr title="Compass primary key" PK
-                th Name
                 th
             tbody
               - @cohorts.each do |cohort|
                 tr
+                  td = link_to cohort.name, cohort
                   td = cohort.compass_install
                   td = cohort.compass_primary_key
-                  td = link_to cohort.name, cohort
                   td.text-right
                     = link_to cohort, method: :delete, class: 'text-muted pull-right', data: { confirm: "Are you sure you want to delete \"#{cohort_name(cohort)}\"?" } do
                       i.fa.fa-trash title="Delete"
