--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -13,19 +13,18 @@
           table.table
             thead
               tr
-                th Day
-                th Cohort
-                th Details
-                th
+                th width="50%" Quiz
+                th width="50%" Cohort
                 th
             tbody
               - @quizzes.each do |quiz|
                 tr
-                  td = quiz.day
-                  td = link_to quiz.cohort.name, quiz.cohort
-                  td = link_to quiz do
-                    time datetime="#{quiz.created_at.to_formatted_s(:iso)}" = "created #{time_ago_in_words(quiz.created_at)} ago"
-                  td = link_to quiz.submissions.count, new_quiz_submission_url(quiz), class: 'label label-primary', title: 'Submissions - New submission link'
+                  td
+                    = link_to quiz do
+                      = "#{quiz.day} ("
+                      time datetime="#{quiz.created_at.to_formatted_s(:iso)}" = "created #{time_ago_in_words(quiz.created_at)} ago"
+                      = ')'
+                  td = link_to quiz.cohort.name, quiz.cohort, class: 'text-inherit'
                   td.text-right
                     = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: 'Are you sure you want to delete this quiz?'} do
                       i.fa.fa-trash title="Delete"
