--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -5,7 +5,7 @@
       li.active Questions
     .page-header
       h1
-        = 'All Questions '
+        = 'Questions '
         a.btn.btn-xs.btn-primary href="#{new_question_path}" New Question
     - if @questions.empty?
       p There are currently no questions in the system.
