--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -6,10 +6,8 @@
       li.active = @activity.id
     .page-header
       h1
-        i = @activity.compass_install.upcase
-        = ' '
-        b = @activity.day
-        = " #{@activity.title}"
+        b = 'Activity: '
+        = "#{@activity.day} - #{@activity.title}"
       p
         = render partial: 'shared/header_timestamps', locals: {model: @activity}
         = ' | '
