--- a/app/views/cohorts/show.html.slim
+++ b/app/views/cohorts/show.html.slim
@@ -6,8 +6,8 @@
       li.active = @cohort.name
     .page-header
       h1
-        i = @cohort.compass_install.upcase
-        = " #{@cohort.name}"
+        b = 'Cohort: '
+        = @cohort.name
       p
         = render partial: 'shared/header_timestamps', locals: {model: @cohort}
         = ' | '
