--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,7 +6,8 @@
       li.active = @question.id
     .page-header
       h1
-        = "Question #{@question.id} "
+        b = 'Question: '
+        = @question.id
       p
         = render partial: 'shared/header_timestamps', locals: {model: @question}
         = ' | '
