--- a/app/views/quizzes/_form.html.slim
+++ b/app/views/quizzes/_form.html.slim
@@ -8,5 +8,5 @@
         .col-sm-9 = f.select(:day, quiz_day_options, {}, {class: 'form-control'})
       .form-group
         = f.label :cohort_id, class: 'control-label col-sm-3'
-        .col-sm-9 = f.select(:cohort_id, Cohort.all.map { |cohort| ["#{cohort.compass_install.upcase} - #{cohort.name}", cohort.id] }, {}, {class: 'form-control'})
+        .col-sm-9 = f.select(:cohort_id, quiz_cohort_options, {}, {class: 'form-control'})
     .panel-footer.clearfix = f.submit class: 'btn btn-primary pull-right'
