--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -13,18 +13,13 @@
           table.table
             thead
               tr
-                th width="50%" Quiz
-                th width="50%" Cohort
+                th width="100%" Quiz
                 th
             tbody
               - @quizzes.each do |quiz|
                 tr
                   td
-                    = link_to quiz do
-                      = "#{quiz.day} ("
-                      time datetime="#{quiz.created_at.to_formatted_s(:iso)}" = "created #{time_ago_in_words(quiz.created_at)} ago"
-                      = ')'
-                  td = link_to quiz.cohort.name, quiz.cohort, class: 'text-inherit'
+                    = link_to "#{quiz.day} - #{quiz.cohort.name}", quiz
                   td.text-right
                     = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: 'Are you sure you want to delete this quiz?'} do
                       i.fa.fa-trash title="Delete"
