--- a/app/views/cohorts/index.html.slim
+++ b/app/views/cohorts/index.html.slim
@@ -15,6 +15,7 @@
               tr
                 th width="100%" Cohort
                 th
+                th
                   abbr title="Compass install" Install
                 th
                   abbr title="Compass primary key" PK
@@ -23,6 +24,7 @@
               - @cohorts.each do |cohort|
                 tr
                   td = link_to cohort.name, cohort
+                  td = link_to cohort.quizzes.count, quizzes_path(cohort_id: cohort.id), class: 'label label-primary', title: 'Quizzes | New Quiz'
                   td.text-nowrap = cohort.compass_install
                   td = cohort.compass_primary_key
                   td.text-right
