--- a/app/views/quizzes/index.html.slim
+++ b/app/views/quizzes/index.html.slim
@@ -15,11 +15,12 @@
               tr
                 th width="100%" Quiz
                 th
+                th
             tbody
               - @quizzes.each do |quiz|
                 tr
-                  td
-                    = link_to "#{quiz.day} - #{quiz.cohort.name}", quiz
+                  td = link_to "#{quiz.day} - #{quiz.cohort.name}", quiz
+                  td = link_to quiz.submissions.count, new_quiz_submission_url(quiz), class: 'label label-primary', title: 'Submissions | New Submission'
                   td.text-right
                     = link_to quiz, method: :delete, class: 'text-muted pull-right', data: {confirm: 'Are you sure you want to delete this quiz?'} do
                       i.fa.fa-trash title="Delete"
