Make score reporting and stats consistent between cohort and quiz pages.

--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -14,7 +14,7 @@
             thead
               tr
                 th width="100%" Activity
-                th
+                th.text-right
                 th
                   abbr title="Compass install" Install
                 th
@@ -24,7 +24,7 @@
               - @activities.each do |activity|
                 tr
                   td = link_to "#{activity.day} - #{activity.title}", activity
-                  td = link_to activity.questions.count, new_question_url(activity_id: activity.id), class: 'label label-primary', title: 'Questions | New Question'
+                  td.text-right = link_to activity.questions.count, new_question_url(activity_id: activity.id), class: 'label label-primary', title: 'Questions | New Question'
                   td.text-nowrap = activity.compass_install
                   td = activity.compass_primary_key
                   td.text-right
