--- a/app/views/cohorts/show.html.slim
+++ b/app/views/cohorts/show.html.slim
@@ -38,24 +38,18 @@
     - else
       p Submissions show the number of correct answers given, incorrect answers given, and omitted questions in the format: <b>correct</b><span class="text-muted">, incorrect, omitted</span>.
       .table-responsive
-        table.table.table-condensed
+        table.table
           thead
             tr
-              th Student
+              th width="100%" Student
               - @cohort.quizzes.each_with_index do |quiz, index|
-                th.text-right.text-nowrap = link_to "Quiz ##{index + 1}", quiz
+                th.text-center.text-nowrap = link_to "Quiz ##{index + 1}", quiz
           tbody
             - @cohort.students.each do |student|
               tr
                 td
                   = student.github_username
                 - @cohort.quizzes.each do |quiz|
-                  td.text-right
-                    - @submission_stats.select { |s| s.student_id == student.id && s.quiz_id == quiz.id }.group_by(&:uuid).each_value do |submissions|
-                      .score = link_to submissions.first, class: 'text-inherit' do
-                        b title="correct" = submissions.find(&:options_correct).try(:answers_count) || '0'
-                        span.text-muted
-                          = ', '
-                          span title="incorrect" = submissions.find { |s| s.options_correct.equal?(false) }.try(:answers_count) || '0'
-                          = ', '
-                          span title="omitted" = submissions.find { |s| s.options_correct.nil? }.try(:answers_count) || '0'
+                  td.text-center
+                    - @submission_stats.select { |s| s.student_id == student.id && s.quiz_id == quiz.id }.group_by(&:id).each_value do |submissions|
+                      = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
