--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -21,7 +21,7 @@
     .row
       .col-md-6
         h2 Submissions
-        - if @quiz.submissions.empty?
+        - if @submission_stats.empty?
           p There are currently no submissions for this quiz.
         - else
           table.table
@@ -29,30 +29,23 @@
               tr
                 th Student
                 th Score
-                th Percent
                 th Submitted
                 th
             tfoot
               tr
-                th Average
-                td = @quiz.average_score
-                td = "#{@quiz.average_percent}%"
+                th Average correct
+                td = @submission_stats.average_correct.round(2)
                 th Number of submissions
-                td.text-right = @quiz.submissions_count
+                td.text-right = @quiz.submissions.count
             tbody
-              - @quiz.submissions.each do |submission|
-                tr
-                  td
-                    - if submission.student.github_username.blank?
-                      span.text-muted
-                        | [anonymous]
-                    - else
-                      b = link_to(submission.student.github_username, submission_path(submission))
-                  td = submission.score
-                  td = "#{submission.percent}%"
-                  td = submission.created_at
-                  td.text-right = link_to submission_path(submission), method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
-                    i.fa.fa-trash title="Delete"
+              - @submission_stats.group_by { |s| s.student.try(:github_username) || '[deleted student]' }.sort.each do |username_submissions_pairs|
+                - username_submissions_pairs[1].group_by(&:id).each_value do |submissions|
+                  tr
+                    td = link_to username_submissions_pairs[0], submissions.first
+                    td = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
+                    td.text-nowrap = link_to submissions.first.created_at, submissions.first, class: 'text-inherit'
+                    td.text-right = link_to submissions.first, method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
+                      i.fa.fa-trash title="Delete"
       .col-md-6
         h2 Questions
         - @quiz.questions.each_with_index do |question, question_index|
